--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -13,8 +14,8 @@
     />
     <title>Samuss Photo</title>
   </head>
-    <body>
-     <main>
+    <body style = "font-family: Franklin Gothic Medium" class="flex-column min-vh-100">
+     <main class="d-flex flex-column min-vh-100">
       <header>
         <div class="logo">Sammus<span> Photo</span> 📷</div>
         <nav class="menu">
@@ -29,9 +30,28 @@
       </header>
       <h1>Samuss</h1>
       <h2>The Galactic Portrait hunter</h2>
-        <div class="profile">
-          <img src="img/camera-1130731_1920.jpg" alt="" />
-            <div class="proft"></div>
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/mountains-190055_1920.jpg" class="d-block w-50" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/thunderstorm-3440450_1920.jpg" class="d-block w-50" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="img/avenue-815297_1920.jpg" class="d-block w-50" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        <div class="proft"></div>
                 <p>
                     Juan Samudio (@samussphoto) is a photographer and videographer
                     currently residing in Bogota (Colombia) and constantly traveling to
@@ -46,10 +66,9 @@
                     building each other up is very important for him in order to bring
                     creative ideas to life.
                 </p>
-            </div>
-      </div>
+        </div>
       </main>
-      <footer>
+      <footer style = "font-family: Franklin Gothic Medium">
         <h3>Samuss Photo Original Content</h3>
         <div class="redes">
           <a href=""><i class="fa-brands fa-facebook"></i></a>
@@ -60,6 +79,6 @@
           <a href=""><i class="fa-brands fa-tiktok"></i></a>
         </div>
       </footer>
-    
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
