--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -32,6 +32,10 @@
         
         <label for="lastname">Last Name</label>
         <input type="text" id="lastname">
+
+        <label for="date">Start date</label>
+        <span id="date-format">(DD-MM-YYYY):</span>
+        <input type="date" id="date" aria-describedby="date-format" min="2021-03-01" max="2031-01-01" />
         
         <label for="email">E-mail</label>
         <input type="text" id="email">
