--- a/paginas/convenios.html
+++ b/paginas/convenios.html
@@ -21,18 +21,20 @@
     </nav>
    </header> 
    <main>
-    <div class="con">
-        <h3>Gfuel Energy</h3>
-        <img class="conimg" src="../img/Gfuel.jpg" alt="">
-        <p>Code: Samuss20</p>
-    </div>
+        <div class="contConv">
+            <div class="con">
+                <h3>Gfuel Energy</h3>
+                <img class="conimg" src="../img/Gfuel.jpg" alt="">
+                <p>Code: Samuss20</p>
+            </div>
 
-    <h3>MPB - Photography equipment marketplace</h3>
-    <div class="con">
-        <img class="conimg" src="../img/MPB-logo.jpg" alt="">
-        <p>MPB Interview</p>
-    </div>
-
+            
+            <div class="con">
+                <h3>MPB - Photography equipment marketplace</h3>
+                <img class="conimg" src="../img/MPB-logo.jpg" alt="">
+                <p>MPB Interview</p>
+            </div>
+        </div>
    </main>
      <footer>
         <p>Samuss Photo Original Content</p>
