--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Samussphoto</title>
+    <meta name="description" content="Follow the adventures of Samuss AKA Juan Samudio">
+    <meta name=”robots” content="index, follow">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link
       rel="stylesheet"
@@ -33,13 +36,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/mountains-190055_1920.jpg" class="d-block w-50" alt="...">
+            <img src="img/mountains-190055_1920.jpg" class="d-block w-50" alt="Montaña">
           </div>
           <div class="carousel-item">
-            <img src="img/thunderstorm-3440450_1920.jpg" class="d-block w-50" alt="...">
+            <img src="img/thunderstorm-3440450_1920.jpg" class="d-block w-50" alt="Trueno">
           </div>
           <div class="carousel-item">
-            <img src="img/avenue-815297_1920.jpg" class="d-block w-50" alt="...">
+            <img src="img/avenue-815297_1920.jpg" class="d-block w-50" alt="Avenida">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
