--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -62,6 +62,7 @@
               <img src="../img/Playa 9.jpg" alt="Image 9">
               <p>Card 9</p>
             </div>
+          </div>
    </main>
     
    <footer>
