correciones con respecto a los alt en las imagenes para mejorar el SEO

--- a/paginas/convenios.html
+++ b/paginas/convenios.html
@@ -24,14 +24,14 @@
         <div class="contConv">
             <div class="con">
                 <h3>Gfuel Energy</h3>
-                <img class="conimg" src="../img/Gfuel.jpg" alt="">
+                <img class="conimg" src="../img/Gfuel.jpg" alt="Logo de la marca Gfuel">
                 <p>Code: Samuss20</p>
             </div>
 
             
             <div class="con">
                 <h3>MPB - Photography equipment marketplace</h3>
-                <img class="conimg" src="../img/MPB-logo.jpg" alt="">
+                <img class="conimg" src="../img/MPB-logo.jpg" alt="Logo de la empresa MPB">
                 <p>MPB Interview</p>
             </div>
         </div>
