Correcciones pre entrega 3

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="estilos/estilos.css" />
     <title>Samuss Photo</title>
   </head>
     <body style = "font-family: Franklin Gothic Medium" class="flex-column min-vh-100">
      <main class="d-flex flex-column min-vh-100">
       <header>
-        <div class="logo">Sammus<span> Photo</span> 📷</div>
+        <div class="logo">Samuss<span> Photo</span> 📷</div>
         <nav class="menu">
           <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -55,7 +55,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-        <div class="proft"></div>
+        <div class="proft">
                 <p>
                     Juan Samudio (@samussphoto) is a photographer and videographer
                     currently residing in Bogota (Colombia) and constantly traveling to
