--- a/paginas/info.html
+++ b/paginas/info.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../estilos.css" />
+    <meta name="description" content="Check my usual working spots through the world">
+    <meta name="keywords" content="Samuss, Photo, Portrait, Bogota, Los Angeles">
+    <link rel="stylesheet" href="../estilos/estilos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,7 +17,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">Galeria de Photos <span>Photo</span> 📷</div>
+      <div class="logo">Samuss Photos <span>Photo</span> 📷</div>
       <nav class="menu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
@@ -27,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <h1>Samussphoto</h1>
+      <h1>Samuss Photo</h1>
       <h2>Lugares de Trabajo</h2>
       <div class="contMap">
         <div class="map">
@@ -60,7 +62,9 @@
       <p>Samuss Photo Original Content</p>
       <div class="redes">
         <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/samussphoto/?hl=en"
+                ><i class="fa-brands fa-instagram"></i
+            ></a>
         <a href=""><i class="fa-brands fa-twitter"></i></a>
         <a href=""><i class="fa-brands fa-tiktok"></i></a>
       </div>
