--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../estilos.css">
+        <meta name="description" content="Send your info and inquiry so we can work together">
+        <meta name="keywords" content="Samuss, Photo, Portrait, Bogota, Los Angeles">
+        <link rel="stylesheet" href="../estilos/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Galeria</title>
+        <title>Contacto</title>
     </head>
     <body>
         <header>
-            <div class="logo">Galeria de Photos <span>Photo</span> 📷</div>
+            <div class="logo">Samuss Photos <span>Photo</span> 📷</div>
     <nav class="menu">
        <ul>
             <li><a href="../index.html">Inicio</a></li>
@@ -48,7 +50,9 @@
         <p>Samuss Photo Original Content</p>
         <div class="redes">
             <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/samussphoto/?hl=en"
+                ><i class="fa-brands fa-instagram"></i
+            ></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-tiktok"></i></a>
         </div>
