--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../estilos.css">
+        <meta name="description" content="Check out my artwork, my other view of the world though my lens">
+        <meta name="keywords" content="Samuss, Photo, Portrait, Bogota, Los Angeles">
+        <link rel="stylesheet" href="../estilos/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Galeria</title>
     </head>
     <body>
         <header>
-            <div class="logo">Galeria de Photos <span>Photo</span> 📷</div>
+            <div class="logo">Samuss Photos <span>Photo</span> 📷</div>
     <nav class="menu">
        <ul>
             <li><a href="../index.html">Inicio</a></li>
@@ -21,46 +23,46 @@
     </nav>
    </header> 
    <main class="index-main">
-        <h1 class="gal">Samuss photo</h1>
+        <h1 class="gal">Samuss Photo</h1>
 
-        <h2 class="gal">Landscape Gallery</h2>
+        <h2 class="gal">Galeria De Paisajes</h2>
 
         <div class="grid-container-gal">
             <div class="card">
               <img src="../img/Playa.jpg" alt="Image 1">
-              <p>Card 1</p>
+              <p>Reflejos Del Atardecer</p>
             </div>
             <div class="card">
               <img src="../img/Playa 2.jpg" alt="Image 2">
-              <p>Card 2</p>
+              <p>Paraiso Tropical</p>
             </div>
             <div class="card">
               <img src="../img/Playa 3.jpg" alt="Image 3">
-              <p>Card 3</p>
+              <p>Costa Dorada</p>
             </div>
               <div class="card">
               <img src="../img/Playa 4.jpg" alt="Image 4">
-              <p>Card 4</p>
+              <p>Niebla Del Desierto</p>
             </div>
             <div class="card">
               <img src="../img/Playa 5.jpg" alt="Image 5">
-              <p>Card 5</p>
+              <p>Resort Acuatico</p>
             </div>
             <div class="card">
               <img src="../img/Playa 6.jpg" alt="Image 6">
-              <p>Card 6</p>
+              <p>Cielo Carmesi</p>
             </div>
               <div class="card">
               <img src="../img/Playa 7.jpg" alt="Image 7">
-              <p>Card 7</p>
+              <p>Playa Escondida</p>
             </div>
             <div class="card">
               <img src="../img/Playa 8.jpg" alt="Image 8">
-              <p>Card 8</p>
+              <p>Marea Celeste</p>
             </div>
             <div class="card">
               <img src="../img/Playa 9.jpg" alt="Image 9">
-              <p>Card 9</p>
+              <p>Calido Amanecer</p>
             </div>
           </div>
    </main>
@@ -69,7 +71,9 @@
         <p>Samuss Photo Original Content</p>
         <div class="redes">
             <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/samussphoto/?hl=en"
+                ><i class="fa-brands fa-instagram"></i
+            ></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
             <a href=""><i class="fa-brands fa-tiktok"></i></a>
         </div>
